# rtc

./: .env.demo  .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  rtc.demo.toml  rtc.example.toml
app/: Cargo.toml
app/src/: bootstrap.rs  cli.rs  config.rs  env.rs  fake_service_log.rs  file_config.rs  main.rs
cli/: Cargo.toml
cli/src/: cli.rs  env.rs  ingest.rs  main.rs
gcp-log-ingestor/: Cargo.toml
libs/common/: Cargo.toml
libs/common/src/: lib.rs  marcos.rs  tracing.rs  types.rs
libs/datadog/: Cargo.toml
libs/datadog/src/: lib.rs
libs/gcp/: Cargo.toml
libs/gcp-log-ingestor/: Cargo.toml
libs/gcp-log-ingestor/src/: lib.rs  normalize.rs
libs/gcp-traces/: Cargo.toml
libs/gcp-traces/src/: creds.rs  lib.rs  trace.rs
libs/gcp/src/: consts.rs  gcp_processor.rs  gcp_service_log.rs  lib.rs  normalize.rs  trace.rs  types.rs  utils.rs
libs/graph-falkor/: Cargo.toml
libs/graph-falkor/src/: consts.rs  lib.rs  macros.rs
libs/logs-to-graph/: Cargo.toml
libs/logs-to-graph/src/: lib.rs  macros.rs  service_graph.rs  service_logs.rs  service_node_graph.rs
libs/service-graph-builder/: Cargo.toml
libs/service-graph-builder/src/: lib.rs
