[package]
name = "datadog"
version = "0.1.0"
edition = "2024"

[dependencies]
datadog-api-client = "0.19.0"
logs-to-graph = { path = "../logs-to-graph" }
anyhow = "1.0.99"
tokio = { version = "1.47.1", default-features = false, features = ["rt", "macros", "sync", "time"] }
async-trait = "0.1.89"
tracing = "0.1"
common = { path = "../common" }
chrono = "0.4.42"
serde = "1.0"
serde_json = "1.0"
