[package]
name = "gcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
google-cloud-logging-v2 = "1"
tracing = "0.1"
tokio = { version = "1", default-features = false, features = ["time", "rt", "macros", "sync"] }
url = "2"
regex = "1.11.2"
async-trait = "0.1.89"
reqwest = "0.12.23"
serde = { version = "1.0", features = ["derive"] }
gcp_auth = "0.12"            # loads ADC and fetches access tokens
serde_json = "1"
logs-to-graph = { path = "../logs-to-graph" }
common = { path = "../common" }
google-cloud-wkt = "1.0.0"
