[package]
name = "logs-to-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", default-features = false, features = ["rt", "macros", "sync"] }
async-trait = "0.1.89"
serde_json = "1.0.144"
serde = { version = "1.0.221", features = ["derive"] }
tracing = "0.1"
common = { path = "../common" }
blake3 = "1.8.2"
